force-app/main/default/objects/Integration_Lookup_Rule__c/Integration_Lookup_Rule__c.object-meta.xml
<CustomObject>
    <description>Lookup resolution rule for reference/lookup fields. Defines how to resolve an API value (e.g., project_code) into a Salesforce record ID by querying a target object with a match field.</description>
    <label>Integration Lookup Rule</label>
    <nameField>
        <displayFormat>ILR-{00000}</displayFormat>
        <label>Lookup Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Lookup Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>