force-app/main/default/objects/Integration_Lookup_Rule__c/fields/Additional_Filter__c.field-meta.xml
<CustomField>
    <fullName>Additional_Filter__c</fullName>
    <description>Optional additional SOQL WHERE clause filter (e.g., Is_Active__c = true). Appended to the lookup query.</description>
    <label>Additional Filter</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>