force-app/main/default/objects/Integration_Lookup_Rule__c/fields/Fail_On_No_Match__c.field-meta.xml
<CustomField>
    <fullName>Fail_On_No_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the mapping engine will throw an error when no matching record is found. If false, the field is set to null.</description>
    <label>Fail On No Match</label>
    <type>Checkbox</type>
</CustomField>