force-app/main/default/objects/Integration_Lookup_Rule__c/fields/Integration_Field_Rule__c.field-meta.xml
<CustomField>
    <fullName>Integration_Field_Rule__c</fullName>
    <description>Master-detail to the parent Integration Field Rule that this lookup resolution applies to.</description>
    <label>Integration Field Rule</label>
    <referenceTo>Integration_Field_Rule__c</referenceTo>
    <relationshipLabel>Lookup Rules</relationshipLabel>
    <relationshipName>Integration_Lookup_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>