force-app/main/default/objects/Integration_Lookup_Rule__c/fields/Lookup_Object__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Object__c</fullName>
    <description>The Salesforce object to query for lookup resolution (e.g., Project__c, Campaign__c).</description>
    <label>Lookup Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>