force-app/main/default/objects/Integration_Lookup_Rule__c/fields/Match_Field__c.field-meta.xml
<CustomField>
    <fullName>Match_Field__c</fullName>
    <description>The field on the Lookup Object to match against the incoming API value (e.g., Project_Code__c, Name).</description>
    <label>Match Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>