force-app/main/default/objects/Integration_Lookup_Rule__c/fields/Return_Field__c.field-meta.xml
<CustomField>
    <fullName>Return_Field__c</fullName>
    <defaultValue>&quot;Id&quot;</defaultValue>
    <description>The field on the Lookup Object whose value is returned (typically Id).</description>
    <label>Return Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>